--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,105 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_width="match_parent"
+    android:id="@+id/drawer_layout"
+    >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        tools:context=".MainActivity"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/toolbar_fragment"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_todoitem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="4dp"
+                />
+        </LinearLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_insert_todoitem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="30dp"
+            android:elevation="8dp"
+            app:maxImageSize="28dp"
+            android:src="@drawable/ic_insert_todoitem_128" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/main_bg_color"
+        android:layout_gravity="start"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/titleLayout"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/teal_700"
-            >
-
-            <Button
-                android:id="@+id/navBtn"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="15dp"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/ic_clear_day" />
-
-            <TextView
-                android:id="@+id/placeName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="45dp"
-                android:layout_gravity="center"
-                android:singleLine="true"
-                android:ellipsize="middle"
-                android:textColor="#673AB7"
-                android:textSize="22sp"
-                android:text="全部类别全部全部类别"
-                />
-        </FrameLayout>
-
+            android:layout_height="49dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:singleLine="true"
+            android:ellipsize="middle"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:text="时光规划集"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#7EC5C5C5"/>
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_todoitem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-
-
-        <Button
+            android:id="@+id/recycler_todocategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_insert_tc"
-            android:text="Insert TodoCategory"
-            android:textAllCaps="false"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_delete_tc"
-            android:text="Delete TodoCategory"
-            android:textAllCaps="false"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_update_tc"
-            android:text="Update TodoCategory"
-            android:textAllCaps="false"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_getall_tc"
-            android:text="Get All TodoCategory"
-            android:textAllCaps="false"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_get_tc_by_id"
-            android:text="Get Target TodoCategory(id)"
-            android:textAllCaps="false"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_get_tc_by_category"
-            android:text="Get Target TodoCategory(name)"
-            android:textAllCaps="false"/>
+            android:paddingTop="4dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            />
     </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_add_todoitem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/ic_clear_day"
-        android:elevation="8dp"/>
-
-
-    
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
