<Add> quote display

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,11 +43,47 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_todoitem"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:paddingTop="4dp"
-
                 />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:padding="8dp"
+                android:background="@color/main_bg_color"/>
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:padding="8dp"
+            android:gravity="center"
+            android:background="@color/main_bg_color"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="@color/text_in_gray"
+                android:gravity="left"
+                android:paddingLeft="10dp"
+                android:paddingRight="60dp"
+                android:text="2022/11/13"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:paddingLeft="10dp"
+                android:paddingRight="60dp"
+                android:text="大丈夫行事, 当弃侥幸之念, 必取百炼成钢, 厚积分秒之功, 始得一鸣惊人。"/>
+        </LinearLayout>
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_insert_todoitem"
@@ -59,8 +95,8 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="30dp"
             android:elevation="8dp"
-            app:maxImageSize="28dp"
-            android:src="@drawable/ic_insert_todoitem_128" />
+            android:src="@drawable/ic_insert_todoitem_128"
+            app:maxImageSize="28dp" />
 
 
     </RelativeLayout>
