--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:padding="8dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="70dp"
             android:gravity="center"
             android:background="@color/main_bg_color"
             android:orientation="vertical"
@@ -72,15 +75,17 @@
                 android:textSize="12sp"
                 android:textColor="@color/text_in_gray"
                 android:gravity="left"
-                android:paddingLeft="10dp"
-                android:paddingRight="60dp"
                 android:text="2022/11/13"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginRight="12dp"
+                android:layout_gravity="left"
+                android:background="@color/text_in_gray"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:paddingLeft="10dp"
-                android:paddingRight="60dp"
                 android:text="大丈夫行事, 当弃侥幸之念, 必取百炼成钢, 厚积分秒之功, 始得一鸣惊人。"/>
         </LinearLayout>
 
