--- a/app/src/main/res/layout/todoitem_card.xml
+++ b/app/src/main/res/layout/todoitem_card.xml
@@ -9,6 +9,7 @@
     >
 
     <RelativeLayout
+        android:id="@+id/todoitem_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
